# margin

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.json
.claude/skills/margin-review/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: PRD.md
src/: cli.rs  lib.rs  main.rs  review.rs
src/anchor/: mod.rs
src/config/: mod.rs
src/export/: mod.rs
src/model/: anchor.rs  event.rs  fold.rs  mod.rs
src/skill/: mod.rs
src/store/: mod.rs
src/tui/: agent.rs  app.rs  emphasis.rs  highlight.rs  keymap.rs  mod.rs  svg.rs  theme.rs  ui.rs
src/vcs/: git.rs  jj.rs  mod.rs  parse.rs
tests/: cli.rs  git_backend.rs
