[package]
name = "margin"
version = "0.2.0"
edition = "2021"
description = "A local TUI for code-review annotations over git/jj"
license = "MIT OR Apache-2.0"

[lib]
name = "margin"
path = "src/lib.rs"

[[bin]]
name = "margin"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
jiff = { version = "0.2.29", features = ["serde"] }
libc = "0.2.180"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
thiserror = "2.0.18"
toml = "1.1.2"
uuid = { version = "1.23.4", features = ["v7", "serde"] }

[dev-dependencies]
tempfile = "3.27.0"

# Optimize dependencies (syntect's fancy-regex compiles its grammars lazily on
# first highlight; unoptimized that is ~1s for Markdown).
[profile.dev.package."*"]
opt-level = 3
